--- a/css/main.css
+++ b/css/main.css
@@ -5,29 +5,50 @@
 
 /*flexbox formatting*/
 .holder {
+  width: 75%;
+  margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
+  justify-content: space-around;
   padding: 20px;
+  border: 2px solid black;
+
 }
 .weatherHolder {
   padding: 20px;
+
+  padding: 50px;
+  width: 75%;
+}
+.newsHolder {
+  padding: 50px;
+  width: 75%;
 }
 .buttonHolder {
   width: 75%;
 }
+
+.topicHolder p {
+  display: inline-block;
+  padding: 25px;
+}
+
+.topicHolder p:hover {
+  background-color: black;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  padding: 20px;
+}
 div h3 {
   text-align: center;
 }
-/*table formatting*/
-table {
-  display: block;
-  text-align: center;
-}
-td {
-  padding: 40px;
-}
-td:hover {
-  background-color: black;
-  color: white;
+
+button {
+  padding: 25px;
+  font-family: "Times New Roman", serif;
 }
