--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Helvetica, sans-serif;
+}
 .title {
   width: 100%;
   text-align: center;
 }
-
 /*flexbox formatting*/
 .holder {
   width: 75%;
@@ -12,8 +16,10 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px;
-  border: 2px solid black;
+  border: 2px solid #e4e5f1;
+  border-radius: 20px;
   margin-top: 20px;
+  background-color: #e5e5e5;
 }
 .weatherParent {
   width: 75%;
@@ -23,7 +29,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px;
-  border: 2px solid black;
+  border: 2px solid #e4e5f1;
+  border-radius: 20px;
   margin-top: 20px;
 }
 .weatherHolder {
@@ -38,17 +45,27 @@
 }
 .buttonHolder {
   width: 75%;
+  text-align: center;
 }
 
 .topicHolder p {
   display: inline-block;
-  padding: 25px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 15px 20px;
+}
+
+.topicHolder p {
+  border: 1px solid red;
+  border-radius: 20px;
+  margin: 10px;
 }
 
 .topicHolder p:hover {
   background-color: black;
   color: white;
 }
+
 .happyPic {
   width: 500px;
 }
@@ -57,6 +74,7 @@
   font-weight: bold;
   text-align: left;
 }
+
 a {
   text-decoration: none;
   color: black;
@@ -65,8 +83,13 @@ a {
 h1 {
   text-align: center;
 }
+h2 {
+  text-align: center;
+  padding: 20px;
+}
 div h3 {
   text-align: center;
+  padding: 20px;
 }
 
 button {
