--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,13 @@
   padding: 50px;
   width: 75%;
 }
+.weatherSuggest {
+  text-align: center;
+}
 .newsHolder {
   padding: 50px;
-  width: 75%;
+  width: 90%;
+  border-radius: 20px;
 }
 .buttonHolder {
   width: 75%;
@@ -56,13 +60,13 @@
 }
 
 .topicHolder p {
-  border: 1px solid red;
+  border: 1px solid #8c8c8c;
   border-radius: 20px;
   margin: 10px;
 }
 
 .topicHolder p:hover {
-  background-color: black;
+  background-color: #8c8c8c;
   color: white;
 }
 
